<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/margin_4">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/margin_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Heading1Black"
            android:text="@string/basic_info"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading2Black"
                android:text="@string/level"/>

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading2Black"
                android:text="2"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading2Black"
                android:text="@string/types"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_types"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading2Black"
                android:text="@string/capture_on"/>

            <TextView
                android:id="@+id/tv_capture_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Heading2Black"
                android:text="July 23rd, 2021"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</androidx.cardview.widget.CardView>